Tasks: Completed Tasks feature, fixed UI errors, aligned the dialog properly.
Notes: Made initial fetching of notes in the notes page.

Overall: Task Completed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,41 @@
 :root {
     background-color: whitesmoke;
 }
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  max-width: 64rem;
+}
+
+.modal::backdrop {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+option {
+    padding: 4px;
+    color: black;
+}
+
+optgroup {
+    padding: 4px;
+    color: black;
+    border-radius: none;
+}
+
+select {
+    border: 1px solid #ccc;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+}
+
+select:focus {
+    outline: none;
+}
